examples/test/testpolicy4507.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4507
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key15: value27
      key28: value46
      key27: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value29
      podSelector:
        matchLabels:
          key3: value31
          key44: value39
          key47: value37
